變更解析度偵測

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="info">
         <p id="device-type">裝置類型: </p>
-        <p id="resolution">可視區域解析度: </p>
+        <p id="innerResolution">window.inner解析度: </p>
+        <p id="documentClientResolution">document.documentElement.client解析度: </p>
     </div>
     <script src="script.js"></script>
 </body>
