新增裝置區域解析偵測

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <p id="device-type">裝置類型: </p>
         <p id="innerResolution">window.inner解析度: </p>
         <p id="documentClientResolution">document.documentElement.client解析度: </p>
+        <p id="htmlResolution">HTML 框線解析度: </p>
+        <p id="bodyResolution">BODY 框線解析度: </p>
+        <p id="mediaType">目前媒體類型: </p>
     </div>
     <script src="script.js"></script>
 </body>
